Added list_files, but it returns absolute paths